--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -19,10 +19,7 @@
   </style>
 </head>
 <body>
-  <!-- The canvas will be added by our WASM code -->
-  <script type="module">
-    import init from "./pkg/web_app.js";
-    init();
-  </script>
+  <script src="https://www.gstatic.com/draco/versioned/decoders/1.5.7/draco_wasm_wrapper.js"></script>
+  <script src="/js/draco-wrapper.js"></script>
 </body>
 </html>
