--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -21,7 +21,7 @@
 <body>
   <script src="https://www.gstatic.com/draco/versioned/decoders/1.5.7/draco_wasm_wrapper.js"></script>
   <script type="module">
-  import init from './pkg/web_app.js';
+  import init from './pkg/web.js';
 
   init().then(() => {
     console.log("WASM initialized");
