--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -11,10 +11,10 @@
       width: 100%;
       height: 100%;
     }
-    canvas {
+    #canvas {
+      display: block;
       width: 100%;
       height: 100%;
-      display: block;
     }
   </style>
 </head>
