--- a/examples/web/index.html
+++ b/examples/web/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Blue Sphere WASM</title>
+  <title>A Better World (WASM)</title>
   <style>
     body, html {
       margin: 0;
